--- a/index.html
+++ b/index.html
@@ -5,33 +5,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
-    <!-- font-family: 'Ubuntu', sans-serif; -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles/style.css">
+   
     <title>Zomato Landing Page</title>
 </head>
 
 <body>
+    <!-- navigation bar -->
+    <nav class="navbar">
+
+        <div class="navbar__brand">
+            <img src="assets/logo.png" alt="navbar brand" class="navbar__brand__logo">
+        </div>
+
+        <button class="btn-primary">Order Now</button>
+
+    </nav>
+    <!-- end of navigation bar -->
+
+    <main class="container">
+
+        <section class="hero">
+            <div class="hero__container">
+                <div class="hero__container__image">
+                    <img class="hero__image" src="assets/hero.jpg" alt="hero pic">
+                    <img class="hero__container__image__bg__1" src="assets/svg/heroShape.svg" alt="">
+                    <img class="hero__container__image__bg__2" src="assets/svg/herobgpattren.svg" alt="">
+                </div>
+                <div class="hero__container__description">
+                    <h1>Order food from your favourite restaurants near you.</h1>
+                    <button class="btn-primary hero-btn">Order Now</button>
+                </div>
+
+            </div>
+        </section>
+
+    </main>
 
 
 
 
 
-
-    
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
-        integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
-        crossorigin="anonymous"></script>
 
 </body>
 
