mobile view of explore section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
-   
+
     <title>Zomato Landing Page</title>
 </head>
 
@@ -31,7 +31,7 @@
     <!-- end of navigation bar -->
 
     <main class="container">
-
+        <!-- hero section -->
         <section class="hero">
             <div class="hero__container">
                 <div class="hero__container__image">
@@ -46,7 +46,44 @@
 
             </div>
         </section>
+        <!-- end of hero section -->
 
+        <!-- explore section -->
+        <section class="explore">
+
+            <h2 class="explore-heading">Explore our menu</h2>
+            <div class="menu-cards">
+                <div class="menu-card">
+                    <div class="menu-card-img-container">
+                        <img src="assets/burger.jpg" alt="burger">
+                    </div>
+                    <div class="menu-card-description">
+                        <h4>Burgers</h4>
+                        <p>Burger King, McDonalds, Burger Palace <span style="color:red;">+3</span></p>
+                    </div>
+                </div>
+                <div class="menu-card menu-card-2">
+                    <div class="menu-card-img-container">
+                        <img src="assets/pizza.jpg" alt="pizza">
+                    </div>
+                    <div class="menu-card-description">
+                        <h4>Burgers</h4>
+                        <p>Dominos, Pizza Hut, Pappariza Pizza <span style="color:red;">+2</span></p>
+                    </div>
+                </div>
+                <div class="menu-card">
+                    <div class="menu-card-img-container">
+                        <img src="assets/iceCream.jpg" alt="pizza">
+                    </div>
+                    <div class="menu-card-description">
+                        <h4>Ice Creams</h4>
+                        <p style="color: #1d3557;">Ibaco, Baskin-Robins<span style="color:red;">+3</span></p>
+                    </div>
+                </div>
+            </div>
+<button class="btn-primary explore-btn">View More</button>
+        </section>
+        <!-- end of explore section -->
     </main>
 
 
