explore section completed for all screen sizes

--- a/index.html
+++ b/index.html
@@ -50,38 +50,42 @@
 
         <!-- explore section -->
         <section class="explore">
+            <div class="explore-container">
+                <h2 class="explore-heading">Explore our menu</h2>
+                <div class="explore-container-gradient-bg"></div>
+                <div class="menu-cards">
+                    <div class="menu-card">
+                        <div class="menu-card-img-container">
+                            <img src="assets/burger.jpg" alt="burger">
+                        </div>
+                        <div class="menu-card-description">
+                            <h4>Burgers</h4>
+                            <p>Burger King, McDonalds, Burger Palace <span style="color:red;">+3</span></p>
+                        </div>
+                    </div>
+                    <div class="menu-card menu-card-2">
+                        <div class="menu-card-img-container">
+                            <img src="assets/pizza.jpg" alt="pizza">
+                        </div>
+                        <div class="menu-card-description">
+                            <h4>Pizza</h4>
+                            <p>Dominos, Pizza Hut, Pappariza Pizza <span style="color:red;">+2</span></p>
+                        </div>
+                    </div>
+                    <div class="menu-card">
+                        <div class="menu-card-img-container">
+                            <img src="assets/iceCream.jpg" alt="pizza">
+                        </div>
+                        <div class="menu-card-description">
+                            <h4>Ice Creams</h4>
+                            <p style="color: #1d3557;">Ibaco, Baskin-Robins<span style="color:red;">+3</span></p>
 
-            <h2 class="explore-heading">Explore our menu</h2>
-            <div class="menu-cards">
-                <div class="menu-card">
-                    <div class="menu-card-img-container">
-                        <img src="assets/burger.jpg" alt="burger">
-                    </div>
-                    <div class="menu-card-description">
-                        <h4>Burgers</h4>
-                        <p>Burger King, McDonalds, Burger Palace <span style="color:red;">+3</span></p>
+                        </div>
                     </div>
                 </div>
-                <div class="menu-card menu-card-2">
-                    <div class="menu-card-img-container">
-                        <img src="assets/pizza.jpg" alt="pizza">
-                    </div>
-                    <div class="menu-card-description">
-                        <h4>Burgers</h4>
-                        <p>Dominos, Pizza Hut, Pappariza Pizza <span style="color:red;">+2</span></p>
-                    </div>
-                </div>
-                <div class="menu-card">
-                    <div class="menu-card-img-container">
-                        <img src="assets/iceCream.jpg" alt="pizza">
-                    </div>
-                    <div class="menu-card-description">
-                        <h4>Ice Creams</h4>
-                        <p style="color: #1d3557;">Ibaco, Baskin-Robins<span style="color:red;">+3</span></p>
-                    </div>
-                </div>
+                    <button class="btn-primary explore-btn">View More</button>
+              
             </div>
-<button class="btn-primary explore-btn">View More</button>
         </section>
         <!-- end of explore section -->
     </main>
