restaurants section progress

--- a/index.html
+++ b/index.html
@@ -83,11 +83,39 @@
                         </div>
                     </div>
                 </div>
-                    <button class="btn-primary explore-btn">View More</button>
-              
+                <button class="btn-primary explore-btn">View More</button>
+
             </div>
         </section>
         <!-- end of explore section -->
+
+        <!-- restaurants section -->
+
+        <section class="restaurants">
+            <div class="restaurants-heading">
+                <h2>Order from 100s of restaurants</h2>
+            </div>
+            <div class="grid">
+                <div class="row-1">
+                    <div class="restaurants-img restaurant-1">
+                        <img src="assets/restaurant1.jpg" alt="">
+                    </div>
+                    <div class="restaurants-img restaurant-2">
+                        <img src="assets/restaurant2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="row-2">
+                    <div class="restaurants-img restaurant-3">
+                        <img src="assets/restaurant3.jpg" alt="">
+                    </div>
+                    <div class="restaurants-img restaurant-4">
+                        <img src="assets/restaurant4.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!-- end of restaurants section -->
     </main>
 
 
