stay updated section completed

--- a/index.html
+++ b/index.html
@@ -116,6 +116,21 @@
 
         </section>
         <!-- end of restaurants section -->
+
+        <!-- stay updated section -->
+
+        <section class="updated">
+            <div>
+                <h2 class="updated-heading">Stay Updated</h2>
+                <div class="updated-content">
+                    <form>
+                        <input type="email" placeholder="example@example.com" class="email">
+                    </form>
+                    <button class="btn-primary updated-btn">Get Updates</button>
+                </div>
+            </div>
+        </section>
+        <!-- end of stay updated section -->
     </main>
 </body>
 
