quote section completed

--- a/index.html
+++ b/index.html
@@ -131,6 +131,17 @@
             </div>
         </section>
         <!-- end of stay updated section -->
+
+        <!-- quote section -->
+
+    <section class="quote">
+        <div class="quote-image-overlay"></div>
+        <div class="quote-container">
+            <p>
+                When a man's stomach is full it makes no difference whether he is rich or poor.</p>
+        </div>
+    </section>
+        <!-- end of quote section -->
     </main>
 </body>
 
