--- a/index.html
+++ b/index.html
@@ -143,6 +143,22 @@
     </section>
         <!-- end of quote section -->
     </main>
+
+    <footer class="footer">
+        <div class="footer-logo">
+            <img src="assets/logo.png" alt="">
+        </div>
+<div class="footer-content">
+    <ul>
+        <li>Pricing</li>
+        <li>Terms &Conditions</li>
+        <li>Partnership</li>
+        <li>Career</li>
+        <li>Contact</li>
+    </ul>
+</div>
+    </footer>
 </body>
+
 
 </html>
